Add gitignore and change Makefile

--- a/cpp/py/Makefile
+++ b/cpp/py/Makefile
@@ -5,7 +5,8 @@ MODE ?= 0
 python: radia.so
 
 radia.so:
-	MODE=$(MODE) python setup.py build_ext --build-lib='../gcc' 
+# MODE=$(MODE) python setup.py build_ext --build-lib='../gcc' 
+	MODE=$(MODE) python-sirius setup.py install
 	cp ../gcc/radia*.so ../../env/radia_python/radia.so
 	rm -rf build
 
