MNT: improve gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 __pycache__/
 *.py[cod]
 
-# ipython notebooks
-
-siriuspy/siriuspy/pwrsupply/tests/.ipynb_checkpoints/
-
 # C extensions
 *.so
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
 
 # Distribution / packaging
 .Python
