ENH: fix and add new targets to makefiles

--- a/cpp/py/Makefile
+++ b/cpp/py/Makefile
@@ -1,12 +1,19 @@
-.PHONY: python clean
 
-MODE ?= 0 
+PACKAGE = Radia_Python_Interface
+PREFIX ?=
+PIP ?= pip
+PYTHON ?= python3
+ifeq ($(CONDA_PREFIX),)
+	PREFIX = sudo -H
+	PIP = pip-sirius
+	PYTHON = python-sirius
+endif
+MODE ?= 0
 
 python: radia.so
 
 radia.so:
-# MODE=$(MODE) python setup.py build_ext --build-lib='../gcc' 
-	MODE=$(MODE) python-sirius setup.py install
+	MODE=$(MODE) $(PYTHON) setup.py build_ext --build-lib='../gcc'
 	cp ../gcc/radia*.so ../../env/radia_python/radia.so
 	rm -rf build
 
@@ -14,3 +21,12 @@ clean:
 	rm -rf build
 	rm -f ../gcc/radia*.so
 	rm -f ../../env/radia_python/radia*.so
+
+install: uninstall python
+	$(PREFIX) $(PIP) install ./
+	$(PREFIX) git clean -fdX
+
+uninstall:
+	$(PREFIX) $(PIP) uninstall -y $(PACKAGE)
+
+.PHONY: python clean install uninstall
